Switched from node-powershell to domain-ping and removed unused dependencies.

--- a/package.json
+++ b/package.json
@@ -9,12 +9,10 @@
   "author": "Justin Savala",
   "license": "ISC",
   "dependencies": {
+    "domain-ping": "^0.1.10",
     "express": "^4.16.3",
     "lodash": "^4.17.11",
-    "node-powershell": "^3.3.1",
     "node-wmi": "0.0.5",
-    "npm": "^6.4.1",
-    "wmi-client": "^0.4.1",
     "ws": "^6.0.0"
   },
   "devDependencies": {
