--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Backend api for Server Monitor.",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "jest --watchAll"
   },
   "author": "Justin Savala",
